# HFT-trading-simulator

./: .clang-format  .dockerignore  .editorconfig  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.prod  README.md  _convert_lazy.js  build-all.bat  ci-test.bat  ci-test.sh  docker-compose.hub.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker.bat  docker.sh  error_monitor.py  install-deps.bat  no-docker.bat  no-docker.sh  package-lock.json  price_monitor.py  run-all-tests.bat  run-all-tests.sh  run-cpp-tests.bat  run_logger.py  shared_config.yaml  start.bat  start.sh  trade_csv_logger.py  verify.bat  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  deploy.yml  nightly-backtest.yml  release.yml
ai-signal-bot/: .dockerignore  Dockerfile  Dockerfile.prod  __init__.py  conftest.py  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_backtest.py
ai-signal-bot/config/: __init__.py  settings.testnet.yaml  settings.yaml
ai-signal-bot/scripts/: migrate.py  run_backtest.py  run_bot.py
ai-signal-bot/tests/: test_backtest.py  test_config_validator.py  test_fft.py  test_indicators.py  test_integration.py  test_kelly.py  test_optimizer.py  test_order_book_replay.py  test_portfolio_optimizer.py  (+4 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_ROADMAP.md  AUDIT_2025.md  CHANGELOG.md  EDUCATIONAL_CONTENT.md  EXCHANGE_SIMULATOR.md  FUTURE_TODO.md  HFT_OPTIMIZATION_IDEAS.md  MASTERPLAN.md  MATH_MODELS.md  PERFORMANCE.md  PROGRESS.md  ROADMAP.md  SETUP.md  TRADING_STRATEGIES.md  WEBSOCKET_PROTOCOL.md  WEB_UI.md  openapi_ws.json
exchange-simulator/: .dockerignore  Dockerfile  Dockerfile.prod  __main__.py  config.yaml  conftest.py  exchange.py  market_simulator.py  pyproject.toml  requirements.txt  visualizer.py  websocket_server.py
exchange_simulator/: .dockerignore  Dockerfile  Dockerfile.prod  __init__.py  __main__.py  config.yaml  conftest.py  exchange.py  market_simulator.py  models.py  requirements-dev.txt  requirements.txt  visualizer.py  websocket_server.py
helm/: Chart.yaml  values.yaml
hft-executor/: Cargo.toml
hft-executor/src/: lib.rs
hft-trade-bot/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.prod  monitor.py
hft-trade-bot/config/: config.prod.yaml  config.yaml
hft-trade-bot/fpga/: fpga_orderbook.vhd
hft-trade-bot/scripts/: build.py  monitor.py  run.py
hft-trade-bot/src/: pch.h
hft-trade-bot/src/communication/: signal_receiver.h
hft-trade-bot/src/core/: config.cpp  config.h  logger.h  main.cpp
hft-trade-bot/src/data/: aligned_types.h  signal.h  types.h
hft-trade-bot/src/exchange/: BinanceAdapter.h  BybitAdapter.h  ExchangeBase.h  IExchange.h  OKXAdapter.h
hft-trade-bot/src/exchange/binance/: binance_config.h
hft-trade-bot/src/exchange/bybit/: bybit_config.h
hft-trade-bot/src/exchange/okx/: okx_config.h
hft-trade-bot/src/execution/: adaptive_order_selector_v2.h  latency_tracker.h  order_executor.h  order_manager.h  order_type_selector.h  smart_order_router_v2.h
hft-trade-bot/src/fix/: fix_decoder.h  fix_encoder.h  fix_message.h  fix_session.h
hft-trade-bot/src/ipc/: shm_fill_producer.h  shm_heartbeat.h  shm_market_data.h  shm_protocol.h  shm_ring_buffer.h  shm_signal_consumer.h
hft-trade-bot/src/market_data/: candle_aggregator.h  order_book_manager.h  trade_handler.h
hft-trade-bot/src/ml/: gpu_accelerator.cu  onnx_engine.h
hft-trade-bot/src/monitoring/: health_server.h  system_monitor.h
hft-trade-bot/src/network/: ws_client.h
hft-trade-bot/src/persistence/: mapped_persistence.h
hft-trade-bot/src/position/: position_manager.h  position_manager_v2.h
hft-trade-bot/src/risk/: kill_switch.h  portfolio_risk.h  pre_trade_risk.h  risk_manager.h
hft-trade-bot/src/strategies/: market_making_v2.h  mean_reversion_v2.h  momentum_breakout_v2.h  pressure_model.h  signal_engine.h  signal_engine_v2.cpp  signal_engine_v2.h  signal_engine_v3.h  statistical_arb_v2.h
hft-trade-bot/src/utils/: low_latency.h
hft-trade-bot/tests/: doctest.h  test_doctest_adaptive_order_selector.cpp  test_doctest_candle_aggregator.cpp  test_doctest_fix_message.cpp  test_doctest_kill_switch.cpp  test_doctest_latency_tracker.cpp  test_doctest_market_making.cpp  test_doctest_mean_reversion.cpp  test_doctest_momentum_breakout.cpp  test_doctest_order_book_manager.cpp  test_doctest_order_manager.cpp  test_doctest_order_type_selector.cpp  test_doctest_portfolio_risk.cpp  test_doctest_position_manager.cpp  test_doctest_position_manager_v1.cpp  test_doctest_position_manager_v2.cpp  test_doctest_pre_trade_risk.cpp  test_doctest_pressure_model.cpp  test_doctest_property_based.cpp  test_doctest_risk_manager.cpp  test_doctest_shm_bulk.cpp  test_doctest_shm_heartbeat.cpp  test_doctest_shm_market_data.cpp  test_doctest_signal_engine.cpp  test_doctest_signal_engine_v3.cpp  test_doctest_smart_order_router.cpp  test_doctest_statistical_arb.cpp  test_doctest_system_monitor.cpp  test_doctest_trade_handler.cpp  test_fix.cpp  test_integration_config.cpp  test_integration_kill_switch_monitor.cpp  test_integration_shm.cpp  test_integration_signal_engine.cpp  test_latency_tracker.cpp  test_market_making.cpp  test_mean_reversion.cpp  test_order_book.cpp  test_order_manager.cpp  test_position_manager.cpp  (+4 more)
hft-trade-bot/tests/integration/: test_signal_flow.cpp
hft-trade-bot/tests/mocks/: mock_exchange.h
hft-trade-bot/tests/unit/: test_exchange_config.cpp  test_monitoring.cpp  test_network.cpp
monitoring/: alerts.yml  ebpf_monitor.py  prometheus.yml
scripts/: benchmark_suite.py  walk_forward_ci.py
web-ui/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
(+507 files in other folders)
