[package]
name = "hft-executor"
version = "1.0.0"
edition = "2021"
description = "High-performance order executor in Rust — FFI callable from C++"

[lib]
name = "hft_executor"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
ahash = "0.8"
smallvec = "1"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
